--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Opsigo | Powerfull Online Booking System</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" src="images/favicon-16x16.png">
+    <link rel="shortcut icon" href="images/favicon-16x16.png">
     <!-- Font Awesome Stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap Stylesheet -->
