--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
                                 <!--=== start form-group ===-->
                                 <div class="form-group wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                                    <input class="form-control" name="email" type="text" id="email" placeholder="Enter Email :" value="">
+                                    <input class="form-control" name="email" type="text" id="email" placeholder="Enter Email :" value="" required>
                                 </div>
                                 <!--=== end form-group ===-->
 
@@ -306,7 +306,7 @@
 
                                 <!--=== start form-group ===-->
                                 <div class="form-group wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                                    <input class="form-control" name="subject" type="text" id="subject" placeholder="Enter Subject :" value="">
+                                    <input class="form-control" name="subject" type="text" id="subject" placeholder="Enter Subject :" value="" required>
                                 </div>
                                 <!--=== end form-group ===-->
 
@@ -317,7 +317,7 @@
 
                                 <!--=== start form-group ===-->
                                 <div class="form-group wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                                    <textarea class="form-control" name="comments" cols="40" rows="7" placeholder="Your Message :" id="comments"></textarea>
+                                    <textarea class="form-control" name="comments" cols="40" rows="7" placeholder="Your Message :" id="comments" required></textarea>
                                 </div>
                                 <!--=== end form-group ===-->
 
